--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ migrate_working_dir/
 # Flutter/Dart/Pub related
 # Libraries should not include pubspec.lock, per https://dart.dev/guides/libraries/private-files#pubspeclock.
 /pubspec.lock
-**/docs/api/
+**/doc/api/
 .dart_tool/
 .packages
 build/
