--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: locus
 description: Background geolocation SDK for Flutter. Native tracking, geofencing, activity recognition, and sync.
-version: 1.0.0
+version: 1.1.0
 homepage: https://github.com/koksalmehmet/locus
 repository: https://github.com/koksalmehmet/locus
 issue_tracker: https://github.com/koksalmehmet/locus/issues
@@ -13,6 +13,8 @@ dependencies:
   flutter:
     sdk: flutter
   permission_handler: ^12.0.1
+  device_info_plus: ^12.3.0
+  url_launcher: ^6.3.0
   # CLI dependencies
   args: ^2.5.0
   xml: ^6.5.0
