--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -159,12 +159,19 @@ jobs:
             echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
           fi
 
-      - uses: subosito/flutter-action@v2
+      - uses: dart-lang/setup-dart@v1
         if: steps.check_version.outputs.do_release == 'true'
-        with:
-          channel: ${{ env.FLUTTER_VERSION }}
-          
-      - run: flutter pub get
+
+      - name: Verify Token Availability
+        if: steps.check_version.outputs.do_release == 'true'
+        run: |
+          if [ -n "$ACTIONS_ID_TOKEN_REQUEST_URL" ]; then
+            echo "✅ OIDC Token Request URL is present"
+          else
+            echo "❌ OIDC Token Request URL is MISSING. Check GitHub environment permissions."
+          fi
+
+      - run: dart pub get
         if: steps.check_version.outputs.do_release == 'true'
 
       - name: Create Git Tag
