feat: implement secure storage and headless validation for native platforms
Android:
- Add EncryptedSharedPreferences via SecurePreferencesFactory for sensitive data
- Add HeadlessValidationDispatcher for background pre-sync validation
- Add HeadlessValidationService as JobIntentService for headless callbacks
- Register HeadlessValidationService in AndroidManifest
- Add androidx.security:security-crypto dependency

iOS:
- Add SecureStorage using Keychain for sensitive callback handles
- Add HeadlessValidationDispatcher for background pre-sync validation
- Migrate headless task registration to use SecureStorage
- Update dispatchHeadlessEvent to use SecureStorage

Both platforms now support:
- Encrypted storage of headless callback handles
- Pre-sync validation when app is terminated via headless callbacks
- registerHeadlessValidationCallback API for Dart integration

--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -52,6 +52,11 @@
             android:name="dev.locus.service.HeadlessService"
             android:exported="false"
             android:permission="android.permission.BIND_JOB_SERVICE" />
+
+        <service
+            android:name="dev.locus.service.HeadlessValidationService"
+            android:exported="false"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
     </application>
 </manifest>
 
