--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ key.properties
 **/android/**/GeneratedPluginRegistrant.java
 
 # iOS
+**/ios/Pods/
 ios/.symlinks/
 ios/Flutter/flutter_assets/
 ios/Flutter/flutter_export_environment.sh
